2005-10-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile (OUT_DIST_FILES): Bugfix.

	* stepmake/stepmake/*:
	* */GNUmakefile:
	* config.make.in:
	* GNUmakefile.in:
	* stepmake/aclocal.m4: Friendlier --srcdir build, allowing `make'
	from any directory in build-dir.  Cleanups.

	* make/srcdir.make.in: Remove.

	* lily/main.cc (setup_paths): Fix and document build-dir hack.

	* SConstruct (CheckYYCurrentBuffer): Use TryCompile (there is no
	main).

	* lily/SConscript: Remove ttftools.

	* SConstruct: Resurrect.

2005-10-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-bracket.cc (print): use dy iso. positions[RIGHT] for
	Y coordinate. 

	* lily/paper-book.cc (add_score_title): put Paper_score title into
	systems_ list.

	* scm/translation-functions.scm (format-new-bass-figure): also
	allow plus in combination with _

2005-10-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: 2.7.13 released.

	* lily/note-collision.cc (check_meshing_chords): don't wipe
	stencil, merely set transparent.

	* Documentation/topdocs/NEWS.tely (Top): mention John Mandereau. 
	(Top): document #'callbacks.
	(Top): document nested \override.

	* input/regression/figured-bass.ly: update for slash and pluses.

	* input/regression/figured-bass-continuation-forbid.ly (Module):
	new file.

	* scm/translation-functions.scm (format-new-bass-figure): use
	slashed-digit if diminished is set.
	(format-new-bass-figure): add + if 'augmented is set.

	* scm/define-markup-commands.scm (slashed-digit): new command slashed-digit.

	* input/test/piano-staff-distance.ly: remove file.

	* Documentation/user/advanced-notation.itely (Formatting cue
	notes): use length-fraction for making stems/beams smaller.

	* lily/parser.yy (bass_figure): accept \+ \! and / as figured bass
	modifications.

	* lily/new-figured-bass-engraver.cc: new property
	centerFiguredBassContinuations

	* Documentation/user/changing-defaults.itely (Difficult tweaks):
	use callbacks.
