@@ -1,5 +1,7 @@
 2005-10-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* mf/SConscript: Updates.
+
 	* lily/GNUmakefile (OUT_DIST_FILES): Bugfix.
 
 	* stepmake/stepmake/*:
